    - Clicking an item in a trade while a hex core is open now opens the trade overview instead of the catalog.
    - Dungeon hexes no longer contribute to the total trades found, preventing from quickly completing the "Find Some Trades" quest.
    - Removed the map colors of hexlights and hexports.
  Gui:
    - Horizontally centered the "Bonuses" text in the catalog.
  Bugfixes:
    - Fixed crash when viewing red star ranked items if your character is missing (in editor mode, god mode, etc.).
    - Fixed crash when trying to sell the item stack in your hand at the Quantum Bazaar when nothing is held.
    - Fixed hexlights and hexports remaining after hex core deletion.
    - Fixed hexlights causing collision clipping at the corners of hex cores.
    - Fixed missing localization for inserter capacity in the item buffs.
  Optimizations:
    - Decreased batch sizes and processing intervals.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 27/11/25
  Features:
    - Hex cores now emit flying text when they make a trade.  Can be disabled in the mod's player settings.
    - Hex cores now emit light, the color of which reacts to circuit signals.
        Default colors adjustable in mod settings!
    - Added "Enable Hexports" selection tool, allowing for large-scale enabling or disabling of hexports.
    - Added filters in trade overview for filtering out non-interplanetary trades, trades in dungeon hexes, and trades that are either in "sink" or "generator" hex cores.
  Minor Features:
    - Added "total belting distance", "sink / generator", and "dungeon" info to the output of /simple-trade-loops, as they are fast calculations.
  Balancing:
    - Made the stack inserter item buff require one less upgrade to have another effect on top of the initial unlock.
    - Slightly increased the range of dungeon gun turrets.
    - Slightly decreased the range of dungeon flamethrower and laser turrets.